[gd_scene load_steps=12 format=4 uid="uid://df3yxmodd4j6h"]

[ext_resource type="PackedScene" uid="uid://kvufpqxm1heu" path="res://Scenes/Parallax/parallax_background.tscn" id="1_rodsc"]
[ext_resource type="Script" uid="uid://dhok8pdi2ylvf" path="res://Scripts/Levels/trail_of_worthiness.gd" id="1_xuiqu"]
[ext_resource type="PackedScene" uid="uid://c7wpweohr6enw" path="res://Scenes/Enemy/enemy.tscn" id="2_cgg5q"]
[ext_resource type="Texture2D" uid="uid://nmk0p1shb875" path="res://Assets/Levels/Mossy Tileset/Mossy - TileSet.png" id="2_xuiqu"]
[ext_resource type="PackedScene" uid="uid://dwnj78l3awe7k" path="res://Scenes/Extra/Doors.tscn" id="4_t6svj"]
[ext_resource type="PackedScene" uid="uid://dy47an8v5wg6g" path="res://Scenes/UI/SceneChangeGate.tscn" id="4_xuiqu"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_r7n5k"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_db8bw"]
texture = ExtResource("2_xuiqu")
texture_region_size = Vector2i(512, 512)
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-85.3333, 256, 256, 256, 256, -85.3333, -85.3333, -85.3333)
0:0/0/terrains_peering_bit/bottom_right_corner = 0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(256, -85.3333, 256, 256, -256, 256, -256, -85.3333)
1:0/0/terrains_peering_bit/bottom_right_corner = 0
1:0/0/terrains_peering_bit/bottom_side = 0
1:0/0/terrains_peering_bit/bottom_left_corner = 0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(85.3333, 256, -256, 256, -256, -85.3333, 85.3333, -85.3333)
2:0/0/terrains_peering_bit/bottom_left_corner = 0
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(85.3333, 256, 85.3333, -85.3333, -85.3333, -85.3333, -85.3333, 256)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(256, -256, 256, -85.3333, 256, 85.3333, 85.3333, 85.3333, 85.3333, 256, -85.3333, 256, -256, 256, -256, 85.3333, -256, -85.3333, -256, -256, -85.3333, -256, 85.3333, -256)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(256, 256, 85.3333, 256, -85.3333, 256, -85.3333, 85.3333, -256, 85.3333, -256, -85.3333, -256, -256, -85.3333, -256, 85.3333, -256, 256, -256, 256, -85.3333, 256, 85.3333)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-85.3333, -85.3333, -85.3333, -256, 85.3333, -256, 85.3333, -85.3333, 256, -85.3333, 256, 85.3333, 256, 256, 85.3333, 256, -85.3333, 256, -256, 256, -256, 85.3333, -256, -85.3333)
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-85.3333, -256, 256, -256, 256, 256, -85.3333, 256)
0:1/0/terrains_peering_bit/right_side = 0
0:1/0/terrains_peering_bit/bottom_right_corner = 0
0:1/0/terrains_peering_bit/top_right_corner = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-256, -256, 256, -256, 256, 256, -256, 256)
1:1/0/terrains_peering_bit/right_side = 0
1:1/0/terrains_peering_bit/bottom_right_corner = 0
1:1/0/terrains_peering_bit/bottom_side = 0
1:1/0/terrains_peering_bit/bottom_left_corner = 0
1:1/0/terrains_peering_bit/left_side = 0
1:1/0/terrains_peering_bit/top_left_corner = 0
1:1/0/terrains_peering_bit/top_side = 0
1:1/0/terrains_peering_bit/top_right_corner = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(85.3333, -256, -256, -256, -256, 256, 85.3333, 256)
2:1/0/terrains_peering_bit/bottom_left_corner = 0
2:1/0/terrains_peering_bit/left_side = 0
2:1/0/terrains_peering_bit/top_left_corner = 0
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(85.3333, -256, 85.3333, 256, -85.3333, 256, -85.3333, -256)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-256, -256, -85.3333, -256, 85.3333, -256, 85.3333, -85.3333, 256, -85.3333, 256, 85.3333, 256, 256, 85.3333, 256, -85.3333, 256, -256, 256, -256, 85.3333, -256, -85.3333)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-256, 256, -256, 85.3333, -256, -85.3333, -85.3333, -85.3333, -85.3333, -256, 85.3333, -256, 256, -256, 256, -85.3333, 256, 85.3333, 256, 256, 85.3333, 256, -85.3333, 256)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-85.3333, 85.3333, -256, 85.3333, -256, -85.3333, -85.3333, -85.3333, -85.3333, -256, 85.3333, -256, 256, -256, 256, -85.3333, 256, 85.3333, 256, 256, 85.3333, 256, -85.3333, 256)
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-85.3333, -256, 256, -256, 256, 85.3333, -85.3333, 85.3333)
0:2/0/terrains_peering_bit/top_right_corner = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(256, 85.3333, 256, -256, -256, -256, -256, 85.3333)
1:2/0/terrains_peering_bit/top_left_corner = 0
1:2/0/terrains_peering_bit/top_side = 0
1:2/0/terrains_peering_bit/top_right_corner = 0
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(85.3333, -256, -256, -256, -256, 85.3333, 85.3333, 85.3333)
2:2/0/terrains_peering_bit/top_left_corner = 0
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(85.3333, -256, 85.3333, 85.3333, -85.3333, 85.3333, -85.3333, -256)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(85.3333, -85.3333, 85.3333, -256, -85.3333, -256, -85.3333, -85.3333, -256, -85.3333, -256, 85.3333, -256, 256, -85.3333, 256, 85.3333, 256, 85.3333, 85.3333, 256, 85.3333, 256, -85.3333)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-85.3333, 85.3333, -85.3333, 256, 85.3333, 256, 85.3333, 85.3333, 256, 85.3333, 256, -85.3333, 256, -256, 85.3333, -256, -85.3333, -256, -85.3333, -85.3333, -256, -85.3333, -256, 85.3333)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(85.3333, 85.3333, 256, 85.3333, 256, -85.3333, 85.3333, -85.3333, 85.3333, -256, -85.3333, -256, -256, -256, -256, -85.3333, -256, 85.3333, -256, 256, -85.3333, 256, 85.3333, 256)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(142.222, -85.3333, 142.222, 85.3333, 256, 85.3333, 256, -85.3333)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-256, -85.3333, -256, 85.3333, 256, 85.3333, 256, -85.3333)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-142.222, -85.3333, -142.222, 85.3333, -256, 85.3333, -256, -85.3333)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-142.222, -85.3333, -142.222, 85.3333, 142.222, 85.3333, 142.222, -85.3333)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(85.3333, 85.3333, 256, 85.3333, 256, -85.3333, 85.3333, -85.3333, 85.3333, -256, -85.3333, -256, -256, -256, -256, -85.3333, -256, 85.3333, -85.3333, 85.3333, -85.3333, 256, 85.3333, 256)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-85.3333, -85.3333, -256, -85.3333, -256, 85.3333, -85.3333, 85.3333, -85.3333, 256, 85.3333, 256, 256, 256, 256, 85.3333, 256, -85.3333, 85.3333, -85.3333, 85.3333, -256, -85.3333, -256)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-85.3333, 85.3333, -85.3333, 256, 85.3333, 256, 85.3333, 85.3333, 256, 85.3333, 256, -85.3333, 256, -256, 85.3333, -256, -85.3333, -256, -256, -256, -256, -85.3333, -256, 85.3333)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-85.3333, 85.3333, -85.3333, 256, 85.3333, 256, 85.3333, 85.3333, 256, 85.3333, 256, -85.3333, 256, -256, 85.3333, -256, -85.3333, -256, -85.3333, -85.3333)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(85.3333, 85.3333, 85.3333, 256, -85.3333, 256, -85.3333, 85.3333, -256, 85.3333, -256, -85.3333, -256, -256, -85.3333, -256, 85.3333, -256, 85.3333, -85.3333)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(85.3333, -85.3333, 256, -85.3333, 256, 85.3333, 85.3333, 85.3333, 85.3333, 256, -85.3333, 256, -256, 256, -256, 85.3333, -256, -85.3333, -85.3333, -85.3333)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-85.3333, -85.3333, -256, -85.3333, -256, 85.3333, -85.3333, 85.3333, -85.3333, 256, 85.3333, 256, 256, 256, 256, 85.3333, 256, -85.3333, 85.3333, -85.3333)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-85.3333, 85.3333, -85.3333, 256, 85.3333, 256, 85.3333, 85.3333, 256, 85.3333, 256, -85.3333, -85.3333, -85.3333)
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(85.3333, -85.3333, 256, -85.3333, 256, 85.3333, 85.3333, 85.3333, 85.3333, 256, -85.3333, 256, -85.3333, 85.3333, -256, 85.3333, -256, -85.3333)
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(85.3333, 85.3333, 85.3333, 256, -85.3333, 256, -85.3333, 85.3333, -256, 85.3333, -256, -85.3333, 85.3333, -85.3333)
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-85.3333, -85.3333, -85.3333, -256, 85.3333, -256, 85.3333, -85.3333, 256, -85.3333, 256, 85.3333, 256, 256, 85.3333, 256, -85.3333, 256, -85.3333, 85.3333)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(85.3333, -85.3333, 85.3333, -256, -85.3333, -256, -85.3333, -85.3333, -256, -85.3333, -256, 85.3333, -256, 256, -85.3333, 256, 85.3333, 256, 85.3333, 85.3333)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(85.3333, 85.3333, 256, 85.3333, 256, -85.3333, 85.3333, -85.3333, 85.3333, -256, -85.3333, -256, -256, -256, -256, -85.3333, -256, 85.3333, -85.3333, 85.3333)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-85.3333, 85.3333, -256, 85.3333, -256, -85.3333, -85.3333, -85.3333, -85.3333, -256, 85.3333, -256, 256, -256, 256, -85.3333, 256, 85.3333, 85.3333, 85.3333)
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-85.3333, -85.3333, -85.3333, -256, 85.3333, -256, 85.3333, -85.3333, 256, -85.3333, 256, 85.3333, 85.3333, 85.3333, 85.3333, 256, -85.3333, 256)
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(85.3333, -85.3333, 256, -85.3333, 256, 85.3333, 85.3333, 85.3333, 85.3333, 256, -85.3333, 256, -85.3333, 85.3333, -256, 85.3333, -256, -85.3333, -85.3333, -85.3333, -85.3333, -256, 85.3333, -256)
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(85.3333, -85.3333, 85.3333, -256, -85.3333, -256, -85.3333, -85.3333, -256, -85.3333, -256, 85.3333, -85.3333, 85.3333, -85.3333, 256, 85.3333, 256)
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-85.3333, 256, -85.3333, 85.3333, -256, 85.3333, -256, -85.3333, -256, -256, 85.3333, -256, 85.3333, -85.3333, 256, -85.3333, 256, 256)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(256, 85.3333, 85.3333, 85.3333, 85.3333, 256, -85.3333, 256, -256, 256, -256, -85.3333, -85.3333, -85.3333, -85.3333, -256, 256, -256)
4:6/0 = 0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-85.3333, -85.3333, -85.3333, -256, 85.3333, -256, 85.3333, -85.3333, 256, -85.3333, 256, 85.3333, -85.3333, 85.3333)
5:6/0 = 0
5:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(85.3333, 85.3333, 256, 85.3333, 256, -85.3333, 85.3333, -85.3333, 85.3333, -256, -85.3333, -256, -85.3333, -85.3333, -256, -85.3333, -256, 85.3333)
6:6/0 = 0
6:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(85.3333, -85.3333, 85.3333, -256, -85.3333, -256, -85.3333, -85.3333, -256, -85.3333, -256, 85.3333, 85.3333, 85.3333)

[sub_resource type="TileSet" id="TileSet_tfrvi"]
tile_size = Vector2i(512, 512)
physics_layer_0/collision_layer = 4
physics_layer_0/collision_mask = 3
physics_layer_0/physics_material = SubResource("PhysicsMaterial_r7n5k")
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Platform"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
sources/1 = SubResource("TileSetAtlasSource_db8bw")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rodsc"]
size = Vector2(44, 165)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t6svj"]
size = Vector2(37.5, 200)

[node name="Trail Of Worthiness" type="Node2D" groups=["Level"]]
script = ExtResource("1_xuiqu")
ENEMY = ExtResource("2_cgg5q")

[node name="ParallaxBackground" parent="." instance=ExtResource("1_rodsc")]

[node name="TileMapContainer" type="Node2D" parent="."]
z_index = 1

[node name="TileMapLayer" type="TileMapLayer" parent="TileMapContainer"]
scale = Vector2(0.125, 0.125)
tile_map_data = PackedByteArray("AAAAAAAAAQABAAEAAAAAAAEAAQABAAEAAAAAAAIAAQABAAEAAAAAAAMAAQABAAEAAAAAAAQAAQABAAEAAAAAAAUAAQABAAEAAAAAAAYAAQABAAEAAAAAAAcAAQABAAEAAAAAAAgAAQABAAEAAAAAAAkAAQABAAEAAAAAAAoAAQABAAEAAAAAAAsAAQABAAEAAAAAAAwAAQABAAEAAAAAAA0AAQABAAEAAAAAAA4AAQABAAEAAAAAAA8AAQABAAEAAAAAABAAAQABAAEAAAAAABEAAQABAAEAAAABAAAAAQABAAEAAAABAAEAAQABAAEAAAABAAIAAQABAAEAAAABAAMAAQABAAEAAAABAAUAAQABAAEAAAABAAYAAQABAAEAAAABAAcAAQABAAEAAAABAAgAAQABAAEAAAABAAkAAQABAAEAAAABAAoAAQABAAEAAAABAAsAAQABAAEAAAABAAwAAQABAAEAAAABAA0AAQABAAEAAAABAA4AAQABAAEAAAABAA8AAQABAAEAAAABABAAAQABAAEAAAABABEAAQABAAEAAAACAAAAAQABAAEAAAACAAEAAQABAAEAAAACAAIAAQABAAEAAAACAAUAAQACAAEAAAACAAYAAQACAAEAAAACAAcAAQACAAEAAAACAAgAAQACAAEAAAACAAkAAQACAAEAAAACAAoAAQACAAEAAAACAAsAAQACAAEAAAACAAwAAQACAAEAAAACAA0AAQACAAEAAAACAA4AAQACAAEAAAACAA8AAQAEAAEAAAACABAAAQABAAEAAAACABEAAQABAAEAAAADAA8AAQABAAAAAAADABAAAQABAAEAAAADABEAAQABAAEAAAAEAA8AAQABAAAAAAAEABAAAQABAAEAAAAEABEAAQABAAEAAAAFAA8AAQABAAAAAAAFABAAAQABAAEAAAAFABEAAQABAAEAAAAGAA8AAQABAAAAAAAGABAAAQABAAEAAAAGABEAAQABAAEAAAAHAA8AAQABAAAAAAAHABAAAQABAAEAAAAHABEAAQABAAEAAAAIAA8AAQABAAAAAAAIABAAAQABAAEAAAAIABEAAQABAAEAAAAJAA8AAQABAAAAAAAJABAAAQABAAEAAAAJABEAAQABAAEAAAAKAA8AAQABAAAAAAAKABAAAQABAAEAAAAKABEAAQABAAEAAAALAA8AAQABAAAAAAALABAAAQABAAEAAAALABEAAQABAAEAAAAMAA8AAQABAAAAAAAMABAAAQABAAEAAAAMABEAAQABAAEAAAANAA8AAQABAAAAAAANABAAAQABAAEAAAANABEAAQABAAEAAAAOAA8AAQABAAAAAAAOABAAAQABAAEAAAAOABEAAQABAAEAAAAPAA8AAQABAAAAAAAPABAAAQABAAEAAAAPABEAAQABAAEAAAAQAA8AAQABAAAAAAAQABAAAQABAAEAAAAQABEAAQABAAEAAAARAA8AAQABAAAAAAARABAAAQABAAEAAAARABEAAQABAAEAAAASAA8AAQABAAAAAAASABAAAQABAAEAAAASABEAAQABAAEAAAATAA8AAQABAAAAAAATABAAAQABAAEAAAATABEAAQABAAEAAAAUAA8AAQABAAAAAAAUABAAAQABAAEAAAAUABEAAQABAAEAAAAVAA8AAQABAAAAAAAVABAAAQABAAEAAAAVABEAAQABAAEAAAAWAA8AAQABAAAAAAAWABAAAQABAAEAAAAWABEAAQABAAEAAAAXAA8AAQABAAAAAAAXABAAAQABAAEAAAAXABEAAQABAAEAAAAYAA8AAQABAAAAAAAYABAAAQABAAEAAAAYABEAAQABAAEAAAAZAA8AAQABAAAAAAAZABAAAQABAAEAAAAZABEAAQABAAEAAAAaAA8AAQABAAAAAAAaABAAAQABAAEAAAAaABEAAQABAAEAAAAbAA8AAQAFAAEAAAAbABAAAQABAAEAAAAbABEAAQABAAEAAAAcAA8AAQABAAEAAAAcABAAAQABAAEAAAAcABEAAQABAAEAAAAdAA8AAQABAAEAAAAdABAAAQABAAEAAAAdABEAAQABAAEAAAAeAA8AAQABAAEAAAAeABAAAQABAAEAAAAeABEAAQABAAEAAAAfAA8AAQABAAEAAAAfABAAAQABAAEAAAAfABEAAQABAAEAAAAgAA8AAQABAAEAAAAgABAAAQABAAEAAAAgABEAAQABAAEAAAAhAA8AAQABAAEAAAAhABAAAQABAAEAAAAhABEAAQABAAEAAAAiAA8AAQABAAEAAAAiABAAAQABAAEAAAAiABEAAQABAAEAAAAjAA8AAQABAAEAAAAjABAAAQABAAEAAAAjABEAAQABAAEAAAADAAAAAQABAAEAAAADAAEAAQABAAEAAAADAAIAAQABAAEAAAAEAAAAAQABAAEAAAAEAAEAAQABAAEAAAAEAAIAAQABAAEAAAAFAAAAAQABAAEAAAAFAAEAAQABAAEAAAAFAAIAAQABAAEAAAAGAAAAAQABAAEAAAAGAAEAAQABAAEAAAAGAAIAAQABAAEAAAAHAAAAAQABAAEAAAAHAAEAAQABAAEAAAAHAAIAAQABAAEAAAAIAAAAAQABAAEAAAAIAAEAAQABAAEAAAAIAAIAAQABAAEAAAAJAAAAAQABAAEAAAAJAAEAAQABAAEAAAAJAAIAAQABAAEAAAAKAAAAAQABAAEAAAAKAAEAAQABAAEAAAAKAAIAAQABAAEAAAALAAAAAQABAAEAAAALAAEAAQABAAEAAAALAAIAAQABAAEAAAAMAAAAAQABAAEAAAAMAAEAAQABAAEAAAAMAAIAAQABAAEAAAANAAAAAQABAAEAAAANAAEAAQABAAEAAAANAAIAAQABAAEAAAAOAAAAAQABAAEAAAAOAAEAAQABAAEAAAAOAAIAAQABAAEAAAAPAAAAAQABAAEAAAAPAAEAAQABAAEAAAAPAAIAAQABAAEAAAAQAAAAAQABAAEAAAAQAAEAAQABAAEAAAAQAAIAAQABAAEAAAARAAAAAQABAAEAAAARAAEAAQABAAEAAAARAAIAAQABAAEAAAASAAAAAQABAAEAAAASAAEAAQABAAEAAAASAAIAAQABAAEAAAATAAAAAQABAAEAAAATAAEAAQABAAEAAAATAAIAAQABAAEAAAAUAAAAAQABAAEAAAAUAAEAAQABAAEAAAAUAAIAAQABAAEAAAAVAAAAAQABAAEAAAAVAAEAAQABAAEAAAAVAAIAAQABAAEAAAAWAAAAAQABAAEAAAAWAAEAAQABAAEAAAAWAAIAAQABAAEAAAAXAAAAAQABAAEAAAAXAAEAAQABAAEAAAAXAAIAAQABAAEAAAAYAAAAAQABAAEAAAAYAAEAAQABAAEAAAAYAAIAAQABAAEAAAAZAAAAAQABAAEAAAAZAAEAAQABAAEAAAAZAAIAAQABAAEAAAAaAAAAAQABAAEAAAAaAAEAAQABAAEAAAAaAAIAAQABAAEAAAACAAQAAQACAAEAAAABAAQAAQABAAEAAAACAAMAAQAEAAAAAAADAAMAAQABAAIAAAAEAAMAAQABAAIAAAAFAAMAAQABAAIAAAAGAAMAAQABAAIAAAAHAAMAAQABAAIAAAAIAAMAAQABAAIAAAAJAAMAAQABAAIAAAAKAAMAAQABAAIAAAALAAMAAQABAAIAAAAMAAMAAQABAAIAAAANAAMAAQABAAIAAAAOAAMAAQABAAIAAAAPAAMAAQABAAIAAAAQAAMAAQABAAIAAAARAAMAAQABAAIAAAASAAMAAQABAAIAAAATAAMAAQABAAIAAAAUAAMAAQABAAIAAAAVAAMAAQABAAIAAAAWAAMAAQABAAIAAAAXAAMAAQABAAIAAAAYAAMAAQABAAIAAAAZAAMAAQABAAIAAAAaAAMAAQABAAIAAAAbAAMAAQAFAAAAAAAbAAQAAQAAAAEAAAAbAAUAAQAAAAEAAAAbAAYAAQAAAAEAAAAbAA4AAQAAAAEAAAAbAAsAAQAAAAEAAAAbAAwAAQAAAAEAAAAbAA0AAQAAAAEAAAAbAAcAAQAAAAIAAAAbAAoAAQAAAAAAAAAcAAoAAQABAAAAAAAdAAoAAQABAAAAAAAeAAoAAQABAAAAAAAfAAoAAQABAAAAAAAgAAoAAQABAAAAAAAcAAcAAQABAAIAAAAdAAcAAQABAAIAAAAeAAcAAQABAAIAAAAfAAcAAQABAAIAAAAgAAcAAQABAAIAAAAhAAcAAQABAAIAAAAcAAsAAQABAAEAAAAcAAwAAQABAAEAAAAcAA0AAQABAAEAAAAcAA4AAQABAAEAAAAdAAsAAQABAAEAAAAdAAwAAQABAAEAAAAdAA0AAQABAAEAAAAdAA4AAQABAAEAAAAeAAsAAQABAAEAAAAeAAwAAQABAAEAAAAeAA0AAQABAAEAAAAeAA4AAQABAAEAAAAfAAsAAQABAAEAAAAfAAwAAQABAAEAAAAfAA0AAQABAAEAAAAfAA4AAQABAAEAAAAgAAsAAQABAAEAAAAgAAwAAQABAAEAAAAgAA0AAQABAAEAAAAgAA4AAQABAAEAAAAhAAsAAQABAAEAAAAhAAwAAQABAAEAAAAhAA0AAQABAAEAAAAhAA4AAQABAAEAAAAiAAsAAQABAAEAAAAiAAwAAQABAAEAAAAiAA0AAQABAAEAAAAiAA4AAQABAAEAAAAjAAsAAQABAAEAAAAjAAwAAQABAAEAAAAjAA0AAQABAAEAAAAjAA4AAQABAAEAAAAhAAoAAQABAAAAAAAiAAoAAQABAAAAAAAjAAoAAQABAAAAAAAiAAcAAQABAAIAAAAjAAcAAQABAAIAAAAbAAAAAQABAAEAAAAbAAEAAQABAAEAAAAbAAIAAQABAAEAAAAcAAAAAQABAAEAAAAcAAEAAQABAAEAAAAcAAIAAQABAAEAAAAcAAMAAQABAAEAAAAcAAQAAQABAAEAAAAcAAUAAQABAAEAAAAcAAYAAQABAAEAAAAdAAAAAQABAAEAAAAdAAEAAQABAAEAAAAdAAIAAQABAAEAAAAdAAMAAQABAAEAAAAdAAQAAQABAAEAAAAdAAUAAQABAAEAAAAdAAYAAQABAAEAAAAeAAAAAQABAAEAAAAeAAEAAQABAAEAAAAeAAIAAQABAAEAAAAeAAMAAQABAAEAAAAeAAQAAQABAAEAAAAeAAUAAQABAAEAAAAeAAYAAQABAAEAAAAfAAAAAQABAAEAAAAfAAEAAQABAAEAAAAfAAIAAQABAAEAAAAfAAMAAQABAAEAAAAfAAQAAQABAAEAAAAfAAUAAQABAAEAAAAfAAYAAQABAAEAAAAgAAAAAQABAAEAAAAgAAEAAQABAAEAAAAgAAIAAQABAAEAAAAgAAMAAQABAAEAAAAgAAQAAQABAAEAAAAgAAUAAQABAAEAAAAgAAYAAQABAAEAAAAhAAAAAQABAAEAAAAhAAEAAQABAAEAAAAhAAIAAQABAAEAAAAhAAMAAQABAAEAAAAhAAQAAQABAAEAAAAhAAUAAQABAAEAAAAhAAYAAQABAAEAAAAiAAAAAQABAAEAAAAiAAEAAQABAAEAAAAiAAIAAQABAAEAAAAiAAMAAQABAAEAAAAiAAQAAQABAAEAAAAiAAUAAQABAAEAAAAiAAYAAQABAAEAAAAjAAAAAQABAAEAAAAjAAEAAQABAAEAAAAjAAIAAQABAAEAAAAjAAMAAQABAAEAAAAjAAQAAQABAAEAAAAjAAUAAQABAAEAAAAjAAYAAQABAAEAAAAkAAcAAQABAAIAAAAlAAcAAQABAAIAAAAmAAcAAQABAAIAAAAnAAcAAQABAAIAAAAoAAcAAQABAAIAAAApAAcAAQABAAIAAAAkAAoAAQABAAAAAAAlAAoAAQABAAAAAAAmAAoAAQABAAAAAAAnAAoAAQABAAAAAAAoAAoAAQABAAAAAAApAAoAAQABAAAAAAAkAAAAAQABAAEAAAAlAAAAAQABAAEAAAAmAAAAAQABAAEAAAAnAAAAAQABAAEAAAAoAAAAAQABAAEAAAAoAAEAAQABAAEAAAApAAEAAQABAAEAAAApAAAAAQABAAEAAAApAAIAAQABAAEAAAApAAMAAQABAAEAAAApAAQAAQABAAEAAAApAAUAAQABAAEAAAApAAYAAQABAAEAAAAmAAQAAQABAAEAAAAmAAMAAQABAAEAAAAmAAIAAQABAAEAAAAmAAEAAQABAAEAAAAlAAEAAQABAAEAAAAkAAEAAQABAAEAAAAkAAIAAQABAAEAAAAkAAMAAQABAAEAAAAkAAQAAQABAAEAAAAkAAUAAQABAAEAAAAkAAYAAQABAAEAAAAlAAYAAQABAAEAAAAlAAUAAQABAAEAAAAlAAQAAQABAAEAAAAlAAMAAQABAAEAAAAlAAIAAQABAAEAAAAmAAUAAQABAAEAAAAmAAYAAQABAAEAAAAnAAYAAQABAAEAAAAnAAUAAQABAAEAAAAnAAQAAQABAAEAAAAnAAMAAQABAAEAAAAnAAIAAQABAAEAAAAnAAEAAQABAAEAAAAoAAIAAQABAAEAAAAoAAMAAQABAAEAAAAoAAQAAQABAAEAAAAoAAUAAQABAAEAAAAoAAYAAQABAAEAAAAnAA0AAQABAAEAAAAnAAwAAQABAAEAAAAnAAsAAQABAAEAAAAmAAsAAQABAAEAAAAlAAsAAQABAAEAAAAkAAsAAQABAAEAAAAkAAwAAQABAAEAAAAkAA0AAQABAAEAAAAkAA4AAQABAAEAAAAkAA8AAQABAAEAAAAkABAAAQABAAEAAAAkABEAAQABAAEAAAAlABEAAQABAAEAAAAlABAAAQABAAEAAAAlAA8AAQABAAEAAAAlAA4AAQABAAEAAAAlAA0AAQABAAEAAAAlAAwAAQABAAEAAAAmAAwAAQABAAEAAAAmAA0AAQABAAEAAAAmAA4AAQABAAEAAAAmAA8AAQABAAEAAAAmABAAAQABAAEAAAAmABEAAQABAAEAAAAnABEAAQABAAEAAAAnABAAAQABAAEAAAAnAA8AAQABAAEAAAAnAA4AAQABAAEAAAAoAA4AAQABAAEAAAAoAA0AAQABAAEAAAAoAAwAAQABAAEAAAAoAAsAAQABAAEAAAApAAsAAQABAAEAAAApAAwAAQABAAEAAAApAA0AAQABAAEAAAApAA4AAQABAAEAAAApAA8AAQABAAEAAAAoAA8AAQABAAEAAAAoABAAAQABAAEAAAAoABEAAQABAAEAAAApABEAAQABAAEAAAApABAAAQABAAEAAAA=")
tile_set = SubResource("TileSet_tfrvi")

[node name="Doors" parent="TileMapContainer" instance=ExtResource("4_t6svj")]
tile_map_data = PackedByteArray("AAAiAAgAAQAAAAEAAAAiAAkAAQAAAAEAAAAiAAoAAQAFAAEAAAAiAAcAAQAFAAAAAAAjAAcAAQABAAEAAAAjAAgAAQABAAEAAAAjAAkAAQABAAEAAAAjAAoAAQABAAEAAAAkAAcAAQABAAEAAAAkAAgAAQABAAEAAAAkAAkAAQABAAEAAAAkAAoAAQABAAEAAAAlAAcAAQABAAEAAAAlAAgAAQABAAEAAAAlAAkAAQABAAEAAAAlAAoAAQABAAEAAAAmAAcAAQABAAEAAAAmAAgAAQABAAEAAAAmAAkAAQABAAEAAAAmAAoAAQABAAEAAAAnAAcAAQABAAEAAAAnAAgAAQABAAEAAAAnAAkAAQABAAEAAAAnAAoAAQABAAEAAAAoAAcAAQABAAEAAAAoAAgAAQABAAEAAAAoAAkAAQABAAEAAAAoAAoAAQABAAEAAAApAAcAAQABAAEAAAApAAgAAQABAAEAAAApAAkAAQABAAEAAAApAAoAAQABAAEAAAA=")

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="EnemySpawner" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="TrailStart" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TrailStart"]
position = Vector2(1722, 577)
shape = SubResource("RectangleShape2D_rodsc")

[node name="SceneChange" parent="." instance=ExtResource("4_xuiqu")]
NextScene = "res://Scenes/Level/path_to_trial.tscn"
PlayerPos = Vector2(100, 500)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SceneChange"]
position = Vector2(2400, 575)
shape = SubResource("RectangleShape2D_t6svj")

[connection signal="timeout" from="EnemySpawner" to="." method="_on_enemy_spawner_timeout"]
[connection signal="body_entered" from="TrailStart" to="." method="_on_trail_start_body_entered"]
